2011-08-19  Tony Chang  <tony@chromium.org>

        [chromium] Mark touch tests as failing on OSX 10.5.

        * platform/chromium/test_expectations.txt:

2011-08-19  Mihnea Ovidenie  <mihnea@adobe.com>

        [CSSRegions]Parse -webkit-region-break(after, before, inside)
        https://bugs.webkit.org/show_bug.cgi?id=66559

        Reviewed by David Hyatt.

        * fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * svg/css/getComputedStyle-basic-expected.txt:

2011-08-19  Mihnea Ovidenie  <mihnea@adobe.com>

        [CSSRegions]Content displayed in regions should not be scrollable
        https://bugs.webkit.org/show_bug.cgi?id=66459

        Reviewed by Darin Adler.

        * fast/regions/content-flowed-into-regions-no-scroll-expected.txt: Added.
        * fast/regions/content-flowed-into-regions-no-scroll.html: Added.

2011-08-19  Julien Chaffraix  <jchaffraix@webkit.org>

        REGRESSION (r84327-r84329): CSS stylesheets fail to load on www.flagstar.com login page
        https://bugs.webkit.org/show_bug.cgi?id=65140
        <rdar://problem/9835905>

        Reviewed by Antti Koivisto.

        * fast/css/link-disabled-attr-expected.txt: This change is a progression, but we are still
        not handling updates to the selected style set properly (already covered by bug 62407).

        * fast/css/stylesheet-enable-first-alternate-expected.txt: Added.
        * fast/css/stylesheet-enable-first-alternate-on-load-expected.txt: Added.
        * fast/css/stylesheet-enable-first-alternate-on-load.html: Added.
        * fast/css/stylesheet-enable-first-alternate.html: Added.
        * fast/css/stylesheet-enable-second-alternate-expected.txt: Added.
        * fast/css/stylesheet-enable-second-alternate-on-load-expected.txt: Added.
        * fast/css/stylesheet-enable-second-alternate-on-load.html: Added.